@@ -206,4 +206,10 @@ eachShape(void *ptr, void* unused)
 	[[TextureMgr sharedTextureMgr] removeAllTextures];
 }
 
+// next delta time will be zero
+-(void) applicationSignificantTimeChange:(UIApplication *)application
+{
+	[[Director sharedDirector] setNextDeltaTimeZero:YES];
+}
+
 @end
