@@ -296,6 +296,12 @@ Class restartAction()
 	[[TextureMgr sharedTextureMgr] removeAllTextures];
 }
 
+// next delta time will be zero
+-(void) applicationSignificantTimeChange:(UIApplication *)application
+{
+	[[Director sharedDirector] setNextDeltaTimeZero:YES];
+}
+
 - (void) dealloc
 {
 	[window release];
